# EduVerse-AI-main-backend

./: .env.example  .gitignore  README.md  UPGRADE_SUMMARY.md  create_test_user.py  package-lock.json  pip_list.txt  pyproject.toml  pyrightconfig.json  requirements.txt  server_log.txt  test_db.py  verify_fixes.py
app/: main.py
app/auth/: auth_service.py  dependencies.py  router.py
app/core/: course_metadata.py  settings.py
app/crud/: _quiz_analytics.py  _teacher_perf_pipeline.py  admins.py  assignment_submissions.py  auth_signup.py  detailed_student_performance.py  grade_calculator.py  payments.py  quiz_submissions.py  quizzes.py  student_performance.py  student_performance_support.py  student_progress.py  students.py  subscription.py  subscription_plans.py  super_admin.py  tenants.py  users.py
app/crud/courses/: __init__.py  enrollment.py  enrollment_support.py  helpers.py  mutations.py  queries.py
app/crud/dashboards/: admin_dashboard.py
app/crud/teachers/: __init__.py  core.py  related.py
app/db/: database.py
app/routers/: adaptive_learning.py  ai_tutor.py  assignment_submissions.py  assignments.py  courses.py  model_manager.py  payments.py  quiz_submissions.py  quizzes.py  reference_upload.py  student_performance.py  student_progress.py  subscription.py  subscription_plans.py  tenants.py  uploads.py
app/schemas/: adaptive_learning.py  admins.py  courses.py  payments.py  quiz_submissions.py  student_performance.py  students.py  subscription.py  subscription_plans.py  super_admin.py  teachers.py  tenants.py  users.py
app/services/: __init__.py  ai_service.py  chat_tutor.py  file_storage_service.py  layer1_validation.py  lesson_generator.py  ollama_service.py  quiz_generator.py  rag_service.py  rag_validator.py  recommendation.py  student_classifier.py  validation_pipeline.py
app/utils/: guards.py  limits.py  security.py  stripe_helpers.py  tenant_students.py  user_status.py
chroma_db/69c939c248b8f459967a9da0_69f2b9336d16fd92d54d00b0/: chroma.sqlite3
chroma_db/69c939c248b8f459967a9da0_69f625c3d00b96f2b5ba215d/: chroma.sqlite3
chroma_db/69c939c248b8f459967a9da0_69f7348bb5e5cbea8bbf73e2/: chroma.sqlite3
chroma_db/69c939c248b8f459967a9da0_69f7359bb5e5cbea8bbf73e4/: chroma.sqlite3
chroma_db/69c939c248b8f459967a9da0_69f7359cb5e5cbea8bbf73e5/: chroma.sqlite3
chroma_db/69de1bc3d31f53e3ac6c60c6_69f2a81a140376d0211acc98/: chroma.sqlite3
chroma_db/69de1bc3d31f53e3ac6c60c6_69f54b968a00833c0720ca6d/: chroma.sqlite3
chroma_db/69de1bc3d31f53e3ac6c60c6_69f54cbb8a00833c0720ca70/: chroma.sqlite3
chroma_db/69f14c33c71183fcb9dc0f26_course/: chroma.sqlite3
chroma_db/69f156af7b1e24bc9841d404_course/: chroma.sqlite3
docs/: AGENT_HANDOFF.md  API_MIGRATION.md
scratch/: check_mongo_config.py  debug_pdf.py
scripts/: check_db_consistency.py  cleanup_global_student_model.py  normalize_default_subscription_plan_limits.py  repair_db_consistency.py
tests/: test_ai_service.py  test_classifier.py  test_endpoints.py
(+9 files in other folders)
