[project]
name = "eduverse-ai-main-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "gunicorn",
    "python-multipart>=0.0.20",

    # Auth & Security
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "pyjwt>=2.10.1",
    "python-jose>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=44.0.1",

    # Database
    "motor>=3.7.0",
    "pymongo>=4.15.0",

    # Validation & Config
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",

    # LangChain / AI — Local LLM (Ollama) + RAG
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.37",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.6",

    # Document loaders for RAG ingestion
    "pypdf>=5.0.0",
    "python-pptx>=1.0.0",
    "docx2txt>=0.8",
    "unstructured>=0.16.0",

    # Embeddings + Vector DB
    "sentence-transformers>=3.0.0",
    "chromadb>=0.6.0",

    # Validation pipeline (Layer 1: ROUGE + BERTScore + sklearn)
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",

    # Ollama HTTP client
    "httpx>=0.28.1",
    "requests>=2.32.3",

    # Payments
    "stripe>=11.5.0",

    # Utilities
    "pyyaml>=6.0.2",
    "orjson>=3.10.15",
    "filetype>=1.2.0",
    "tqdm>=4.67.1",
    # "uuid-utils>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]